# Cronus

./: README.md  pyproject.toml
Cronus-App/: main.py  pyproject.toml
Cronus-App/app/api/: endpoints.py  schemas.py
Cronus-App/app/core/: notifications.py  resources.py  scheduling.py
Cronus-App/docs/: Estrutura base do projeto.txt
Cronus-App/scripts/: setup.py
Cronus-App/tests/: test_api.py  test_core.py
